added projects panel

--- a/stage2/index.html
+++ b/stage2/index.html
@@ -35,14 +35,10 @@
 						</div>
 					</li>
 					<li>
-						<div>
-							<a>Training</a>
-						</div>
+						<a>Training</a>
 					</li>
 					<li>
-						<div>
-							<a>Support</a>
-						</div>
+						<a>Support</a>
 					</li>
 					<li >
 						<div>
@@ -60,7 +56,53 @@
 			is a Spring Project to help you build it. Start small and use just what you need—Spring is modular by design.</p>
 		</div>
 	</div>
-
-			
+	<div class="projects-panel">
+		<div class="flex-panel">
+			<section class="flex-items">
+				<a class="flex-item">
+					<img class="project-icon" src="./assets/images/spring-boot.svg" alt=""/>
+					<div class="project-text">
+						<h3>Spring Boot</h3>
+						<p>Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible.</p>
+					</div>
+				</a>
+				<a class="flex-item">
+					<img class="project-icon" src="./assets/images/spring-framework.svg" alt="" />
+					<div class="project-text">
+						<h3>Spring Framework</h3>
+						<p>Provides core support for dependency injection, transaction management, web apps, data access, messaging, and more.</p>						
+					</div>
+				</a>
+				<a class="flex-item">
+					<img class="project-icon" src="./assets/images/spring-data.svg" alt="" />
+					<div class="project-text">
+						<h3>Spring Data</h3>
+						<p>Provides a consistent approach to data access – relational, non-relational, map-reduce, and beyond.</p>
+					</div>
+				</a>
+				<a class="flex-item">
+					<img class="project-icon" src="./assets/images/spring-cloud.svg" alt="" />
+					<div class="project-text">
+						<h3>Spring Cloud</h3>
+						<p>Provides a set of tools for common patterns in distributed systems. Useful for building and deploying microservices.</p>
+					</div>
+				</a>
+				<a class="flex-item">
+					<img class="project-icon" src="./assets/images/spring-data-flow.svg" alt="" />
+					<div class="project-text">
+						<h3>Spring Cloud Data Flow</h3>
+						<p>Provides an orchestration service for composable data microservice applications on modern runtimes.</p>
+					</div>
+				</a>
+				<a class="flex-item">
+					<img class="project-icon" src="./assets/images/spring-security.svg" alt="" />
+					<div class="project-text">
+						<h3>Spring Security</h3>
+						<p>Protects your application with comprehensive and extensible authentication and authorization support.</p>
+					</div>
+				</a>
+			</section>
+		</div>
+	</div>
 </body>
 </html>
