added media queries

--- a/stage2/index.html
+++ b/stage2/index.html
@@ -91,7 +91,13 @@
 						</ul>
 					</li>
 				</ul>
-		</nav>
+				<div class="hamburger">
+					<div class="burger-bar"></div>
+					<div class="burger-bar"></div>
+					<div class="burger-bar"></div>
+				</div>
+			</div>
+		</nav>		
 	</header>
 	<div>
 		<div class="projects-info">
