--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Spring</title>
-	<link rel="stylesheet" href="./styles/projects-styles.css">
-	<link rel="stylesheet" href="./styles/main.css">
+	<link rel="stylesheet" href="./src/styles/projects-styles.css">
+	<link rel="stylesheet" href="./src/styles/main.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 		<nav class="nav-wrapper">
 			<div class="nav">
 				<a href="/">
-					<img class="spring-logo" src="./assets/images/spring-logo.svg" alt="" />
+					<img class="spring-logo" src="./src/assets/images/spring-logo.svg" alt="" />
 				</a>
 				<ul class="nav-list">
 					<li class="nav-item">
@@ -112,7 +112,7 @@
 		<div class="flex-panel">
 			<section class="flex-items">
 				<a class="flex-item">
-					<img class="project-icon" src="./assets/images/spring-boot.svg" alt="" />
+					<img class="project-icon" src="./src/assets/images/spring-boot.svg" alt="" />
 					<div class="project-text">
 						<h3>Spring Boot</h3>
 						<p>Takes an opinionated view of building Spring applications and gets you up and running as
@@ -120,7 +120,7 @@
 					</div>
 				</a>
 				<a class="flex-item">
-					<img class="project-icon" src="./assets/images/spring-framework.svg" alt="" />
+					<img class="project-icon" src="./src/assets/images/spring-framework.svg" alt="" />
 					<div class="project-text">
 						<h3>Spring Framework</h3>
 						<p>Provides core support for dependency injection, transaction management, web apps, data
@@ -128,7 +128,7 @@
 					</div>
 				</a>
 				<a class="flex-item">
-					<img class="project-icon" src="./assets/images/spring-data.svg" alt="" />
+					<img class="project-icon" src="./src/assets/images/spring-data.svg" alt="" />
 					<div class="project-text">
 						<h3>Spring Data</h3>
 						<p>Provides a consistent approach to data access – relational, non-relational, map-reduce, and
@@ -136,7 +136,7 @@
 					</div>
 				</a>
 				<a class="flex-item">
-					<img class="project-icon" src="./assets/images/spring-cloud.svg" alt="" />
+					<img class="project-icon" src="./src/assets/images/spring-cloud.svg" alt="" />
 					<div class="project-text">
 						<h3>Spring Cloud</h3>
 						<p>Provides a set of tools for common patterns in distributed systems. Useful for building and
@@ -144,7 +144,7 @@
 					</div>
 				</a>
 				<a class="flex-item">
-					<img class="project-icon" src="./assets/images/spring-data-flow.svg" alt="" />
+					<img class="project-icon" src="./src/assets/images/spring-data-flow.svg" alt="" />
 					<div class="project-text">
 						<h3>Spring Cloud Data Flow</h3>
 						<p>Provides an orchestration service for composable data microservice applications on modern
@@ -152,7 +152,7 @@
 					</div>
 				</a>
 				<a class="flex-item">
-					<img class="project-icon" src="./assets/images/spring-security.svg" alt="" />
+					<img class="project-icon" src="./src/assets/images/spring-security.svg" alt="" />
 					<div class="project-text">
 						<h3>Spring Security</h3>
 						<p>Protects your application with comprehensive and extensible authentication and authorization
