--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Spring</title>
+	<link rel="stylesheet" href="./src/styles/main.css">	
+	<link rel="stylesheet" href="./src/styles/mobile-styles.css">
 	<link rel="stylesheet" href="./src/styles/projects-styles.css">
-	<link rel="stylesheet" href="./src/styles/main.css">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 					<div class="burger-bar"></div>
 					<div class="burger-bar"></div>
 				</div>				
-				<ul id="navMobile" class="display nav-list-mobile "></ul>
+				<ul id="navListMobile" class="show nav-list-mobile "></ul>
 			</div>
 		</nav>		
 	</header>
@@ -37,7 +38,7 @@
 				design.</p>
 		</div>
 	</div>
-	<div class="projects-panel">
+	<div class="projects-container">
 		<div class="search-form-container">
 			<form class="search-form" id="search" method="post">
 				<div class="search-icon">
@@ -45,8 +46,8 @@
 				</div>
 			</form>
 		</div>
-		<div class="flex-panel">
-			<section id="projectsSection" class="flex-items"></section>
+		<div class="projects-panel">
+			<section id="projectsSection" class="projects-list"></section>
 		</div>
 	</div>
 	</div>
